align map and fix picture size

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,8 @@
     background: #e6e6e6;
     border: 20px solid #FFF;
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 /*  .map {
     position: absolute;
@@ -66,9 +68,8 @@
   }
 
   .slide {
-      position: absolute;
-      top: 0;
-      left: 0;
+      width: auto;
+      height: auto;
   }
 
   .nav {
